[metadata]
name = thermohw
description = Package for converting thermo homework assignments
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = thermodynamics homework pdf jupyter notebook
maintainer = Bryan W. Weber
author = Bryan W. Weber
maintainer-email = bryan.w.weber@gmail.com
url = https://github.com/bryanwweber/thermohw
project_urls =
    Source = https://github.com/bryanwweber/thermohw
    Tracker = https://github.com/bryanwweber/thermohw/issues
platforms = any
license = BSD-3-clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = thermohw
python_requires = ~=3.7
include_package_data = True
zip_safe = False
install_requires =
    nbconvert>=5.5,<6.0
    traitlets>=4.3,<5.0
    pdfrw>=0.4,<0.5
    pandocfilters>=1.4,<2.0

[options.entry_points]
console_scripts =
    convert_thermo_hw = thermohw.convert_thermo_hw:main

[options.extras_require]
testing =
    pytest>=3.2.0

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    htmlcov,
    docs,
    pyked/tests,
    setup.py
max-line-length = 88
